src/cli/snapshots/ironclaw__cli__tests__long_help_output_without_import.snap
---
source: src/cli/mod.rs
expression: help
---
IronClaw is a secure AI assistant.

Getting started:
  ironclaw onboard              # Interactive setup wizard (recommended for first run)
  ironclaw onboard --quick      # Quick setup: just pick a provider and model
  ironclaw models set-provider openai  # Switch to a specific provider
  ironclaw doctor               # Check your configuration

Common commands:
  ironclaw run                  # Start the agent
  ironclaw config list          # View all settings
  ironclaw models status        # Show current provider and model
  ironclaw models list          # List available providers

Use 'ironclaw <subcommand> --help' for details on any command.

Usage: ironclaw [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard (start here if new to IronClaw)
  config      Manage app configuration settings
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics (check if everything is configured correctly)
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  login       Authenticate with a provider (re-login)
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
